Added initial card-panel layout to config and inventory

--- a/src/assets/lang/application-en.json
+++ b/src/assets/lang/application-en.json
@@ -55,5 +55,13 @@
     "administration"   : "Administration",
     "admin.config"     : "Configuration",
     "link"             : "GitHub"
+  },
+
+  "admin.config" : {
+    "title" : "Configuration"
+  },
+
+  "markets.inventory" : {
+    "title" : "Markets inventory"
   }
 }
