Worked on improving the layout

--- a/src/assets/lang/application-en.yaml
+++ b/src/assets/lang/application-en.yaml
@@ -85,3 +85,5 @@ page:
       title: Trading systems
     monitoring:
       title: Portfolio monitoring
+      portfolios: Portfolios
+      trading-systems: Trading systems
