--- a/src/assets/lang/application-en.yaml
+++ b/src/assets/lang/application-en.yaml
@@ -182,14 +182,17 @@ page:
     # ----------------------------------------------------------------------------
 
     filtering:
-      enabled: Enabled
-      longShortPeriods: Long vs short periods
-      longPeriod: Long period (weeks)
-      shortPeriod: Short period (weeks)
-      threshold: Threshold
-      minPositivePerc: Min positive %
-      equityAverage: Equity vs its average
-      equityPeriods: Periods (days)
+      weeks: Weeks
+      positiveProfit:    Positive profit
+      shortLongPeriods:  Short better than long
+      shortPeriod:       Short period (weeks)
+      longPeriod:        Long period (weeks)
+      longPercentage:    Long percentage
+      winningPercentage: Winning % > value
+      winningPercValue:  Value (%)
+      equityAverage:     Equity over its average
+      equityDays:        Average length (days)
+
       summary: Summary
       analysis: Analysis
       chart:
